--- a/frontend/src/css/MovieCard.css
+++ b/frontend/src/css/MovieCard.css
@@ -122,3 +122,47 @@
     font-size: 1.2rem;
   }
 }
+
+.movie-details {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(243, 240, 240, 0.7);
+}
+
+.details-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+}
+
+.details-content {
+  position: relative;
+  background-color: rgb(51, 51, 51);
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 600px;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Distributes children evenly with space between */
+  align-items: stretch; /* Ensure children take full width */
+  margin: 10px;
+  gap: 1rem
+}
+
+.details-content h3 {
+  margin-top: 0;
+}
+
+.details-content button {
+    margin: 0; /* Remove default margins */
+    padding: 10px; 
+
+}
