--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -39,11 +39,11 @@ body {
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ffffff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #ffffff;
 }
 
 h1 {
@@ -63,7 +63,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ffffff;
 }
 button:focus,
 button:focus-visible {
@@ -72,11 +72,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #e7ecf0;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #858585;
   }
   button {
     background-color: #f9f9f9;
