--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #938f8f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -72,7 +72,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #e7ecf0;
+    color: #eceeee;
     background-color: #ffffff;
   }
   a:hover {
@@ -81,4 +81,12 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.error-message {
+  color: #0f0d0d;
+}
+
+.loading {
+color: #0b0a0a;
 }
